--- a/microservice-app/projects/root-gateway/src/index.html
+++ b/microservice-app/projects/root-gateway/src/index.html
@@ -2,14 +2,12 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>Crm</title>
+  <title>RootGateway</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons/font/bootstrap-icons.css" rel="stylesheet" />
   <script src="https://cdn.tailwindcss.com"></script>
-
-
 </head>
 <body>
   <app-root></app-root>
