--- a/microservice-app/projects/crm/src/index.html
+++ b/microservice-app/projects/crm/src/index.html
@@ -8,7 +8,9 @@
   <link rel="icon" type="image/x-icon" href="favicon.ico">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons/font/bootstrap-icons.css" rel="stylesheet" />
   <script src="https://cdn.tailwindcss.com"></script>
-
+ 
+<!-- 
+  <link href="https://cdn.jsdelivr.net/npm/tailwindcss@3.3.3/dist/tailwind.min.css" rel="stylesheet"> -->
 
 </head>
 <body>
